Add colors to icons

--- a/app.html
+++ b/app.html
@@ -28,10 +28,10 @@
                     <h3 class="yf-person-title" data-fittext="{$ person.scale.title || '1.4' $}">{$ person.title $}</h3>
                     <div class="yf-person-socials" data-fittext="{$ person.scale.social || '1.9' $}">
                         <span class="yf-person-social" ng-if="person.twitter">
-                            <i class="fa fa-twitter"></i> {$ person.twitter $}
+                            <i class="fa fa-twitter" style="color: #55cCee;"></i> {$ person.twitter $}
                         </span> 
                         <span class="yf-person-social" ng-if="person.github">
-                            <i class="fa fa-github"></i> {$ person.github $}
+                            <i class="fa fa-github" style="color: #ccc;"></i> {$ person.github $}
                         </span>
                     </div>
                 </div>
