Add pause indicator

--- a/app.html
+++ b/app.html
@@ -37,5 +37,6 @@
                 </div>
             </li>
         </ul>
+        <i class="fa fa-pause yf-pause" ng-show="paused"></i>
     </body>
 </html>
